--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <option value="CAD">CAD</option>
                 <option value="EUR">EUR</option>
                 <option value="GBP">GBP</option>
-                <option value="INR" selected>INR</option>
+                <option value="INR">INR</option>
                 <option value="JPY">JPY</option>
-                <option value="TRY">TRY</option>
+                <option value="TRY" selected>TRY</option>
                 <option value="HUF">HUF</option>
                 <option value="USD">USD</option>
             </select>
